# derive-monoid

./: .gitignore  Main.hs  Makefile  README.md  derive-monoid.cabal  stack.yaml
sources/Derive/: List.hs  Monoid.hs
sources/Derive/List/: Extra.hs  Internal.hs  Main.hs
sources/Derive/Monoid/: Internal.hs  Main.hs
test/: Tests.hs
tests/: Build.hs  Tests.hs
